--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "eslint": "^8.33.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-react": "^7.32.2",
+    "sass": "^1.58.0",
     "vite": "^4.1.0"
   }
 }
